bindings/cryptlib.rs

pub const CRYPT_CERTACTION_TYPE_CRYPT_CERTACTION_EXPIRE_CERT: CRYPT_CERTACTION_TYPE = 19;
pub const CRYPT_CERTACTION_TYPE_CRYPT_CERTACTION_CLEANUP: CRYPT_CERTACTION_TYPE = 20;
pub const CRYPT_CERTACTION_TYPE_CRYPT_CERTACTION_LAST: CRYPT_CERTACTION_TYPE = 21;
pub type CRYPT_CERTACTION_TYPE = ::std::os::raw::c_uint;
pub const CRYPT_SUBPROTOCOL_TYPE_CRYPT_SUBPROTOCOL_NONE: CRYPT_SUBPROTOCOL_TYPE = 0;
pub const CRYPT_SUBPROTOCOL_TYPE_CRYPT_SUBPROTOCOL_WEBSOCKETS: CRYPT_SUBPROTOCOL_TYPE = 1;
pub const CRYPT_SUBPROTOCOL_TYPE_CRYPT_SUBPROTOCOL_EAPTTLS: CRYPT_SUBPROTOCOL_TYPE = 2;
pub const CRYPT_SUBPROTOCOL_TYPE_CRYPT_SUBPROTOCOL_PEAP: CRYPT_SUBPROTOCOL_TYPE = 3;
pub const CRYPT_SUBPROTOCOL_TYPE_CRYPT_SUBPROTOCOL_LAST: CRYPT_SUBPROTOCOL_TYPE = 4;
pub type CRYPT_SUBPROTOCOL_TYPE = ::std::os::raw::c_uint;
pub const CRYPT_KEYOPT_TYPE_CRYPT_KEYOPT_NONE: CRYPT_KEYOPT_TYPE = 0;
pub const CRYPT_KEYOPT_TYPE_CRYPT_KEYOPT_READONLY: CRYPT_KEYOPT_TYPE = 1;
pub const CRYPT_KEYOPT_TYPE_CRYPT_KEYOPT_CREATE: CRYPT_KEYOPT_TYPE = 2;
pub const CRYPT_KEYOPT_TYPE_CRYPT_KEYOPT_LAST: CRYPT_KEYOPT_TYPE = 3;
pub type CRYPT_KEYOPT_TYPE = ::std::os::raw::c_uint;
pub type CRYPT_CERTIFICATE = ::std::os::raw::c_int;
pub type CRYPT_CONTEXT = ::std::os::raw::c_int;
pub type CRYPT_DEVICE = ::std::os::raw::c_int;
pub type CRYPT_ENVELOPE = ::std::os::raw::c_int;
pub type CRYPT_KEYSET = ::std::os::raw::c_int;
pub type CRYPT_SESSION = ::std::os::raw::c_int;
pub type CRYPT_USER = ::std::os::raw::c_int;
pub type CRYPT_HANDLE = ::std::os::raw::c_int;
#[doc = "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*\n\t\t\t\t\t\t\tEncryption Data Structures\t\t\t\t\t\t*\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CRYPT_QUERY_INFO {
    pub algoName: [::std::os::raw::c_char; 64usize],
    pub blockSize: ::std::os::raw::c_int,
    pub minKeySize: ::std::os::raw::c_int,
    pub keySize: ::std::os::raw::c_int,
    pub maxKeySize: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CRYPT_QUERY_INFO"][::std::mem::size_of::<CRYPT_QUERY_INFO>() - 80usize];
    ["Alignment of CRYPT_QUERY_INFO"][::std::mem::align_of::<CRYPT_QUERY_INFO>() - 4usize];
    ["Offset of field: CRYPT_QUERY_INFO::algoName"]
        [::std::mem::offset_of!(CRYPT_QUERY_INFO, algoName) - 0usize];
    ["Offset of field: CRYPT_QUERY_INFO::blockSize"]
        [::std::mem::offset_of!(CRYPT_QUERY_INFO, blockSize) - 64usize];
    ["Offset of field: CRYPT_QUERY_INFO::minKeySize"]
        [::std::mem::offset_of!(CRYPT_QUERY_INFO, minKeySize) - 68usize];
    ["Offset of field: CRYPT_QUERY_INFO::keySize"]
        [::std::mem::offset_of!(CRYPT_QUERY_INFO, keySize) - 72usize];
    ["Offset of field: CRYPT_QUERY_INFO::maxKeySize"]
        [::std::mem::offset_of!(CRYPT_QUERY_INFO, maxKeySize) - 76usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CRYPT_OBJECT_INFO {
    pub objectType: CRYPT_OBJECT_TYPE,
    pub cryptAlgo: CRYPT_ALGO_TYPE,
    pub cryptMode: CRYPT_MODE_TYPE,
    pub hashAlgo: CRYPT_ALGO_TYPE,
    pub salt: [::std::os::raw::c_uchar; 64usize],
    pub saltSize: ::std::os::raw::c_int,
    pub iterations: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CRYPT_OBJECT_INFO"][::std::mem::size_of::<CRYPT_OBJECT_INFO>() - 88usize];
    ["Alignment of CRYPT_OBJECT_INFO"][::std::mem::align_of::<CRYPT_OBJECT_INFO>() - 4usize];
    ["Offset of field: CRYPT_OBJECT_INFO::objectType"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, objectType) - 0usize];
    ["Offset of field: CRYPT_OBJECT_INFO::cryptAlgo"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, cryptAlgo) - 4usize];
    ["Offset of field: CRYPT_OBJECT_INFO::cryptMode"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, cryptMode) - 8usize];
    ["Offset of field: CRYPT_OBJECT_INFO::hashAlgo"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, hashAlgo) - 12usize];
    ["Offset of field: CRYPT_OBJECT_INFO::salt"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, salt) - 16usize];
    ["Offset of field: CRYPT_OBJECT_INFO::saltSize"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, saltSize) - 80usize];
    ["Offset of field: CRYPT_OBJECT_INFO::iterations"]
        [::std::mem::offset_of!(CRYPT_OBJECT_INFO, iterations) - 84usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CRYPT_PKCINFO_RSA {
    pub isPublicKey: ::std::os::raw::c_int,
    pub n: [::std::os::raw::c_uchar; 512usize],
    pub nLen: ::std::os::raw::c_int,
    pub e: [::std::os::raw::c_uchar; 512usize],
    pub eLen: ::std::os::raw::c_int,
    pub d: [::std::os::raw::c_uchar; 512usize],
    pub dLen: ::std::os::raw::c_int,
    pub p: [::std::os::raw::c_uchar; 512usize],
    pub pLen: ::std::os::raw::c_int,
    pub q: [::std::os::raw::c_uchar; 512usize],
    pub qLen: ::std::os::raw::c_int,
    pub u: [::std::os::raw::c_uchar; 512usize],
    pub uLen: ::std::os::raw::c_int,
    pub e1: [::std::os::raw::c_uchar; 512usize],
    pub e1Len: ::std::os::raw::c_int,
    pub e2: [::std::os::raw::c_uchar; 512usize],
    pub e2Len: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CRYPT_PKCINFO_RSA"][::std::mem::size_of::<CRYPT_PKCINFO_RSA>() - 4132usize];
    ["Alignment of CRYPT_PKCINFO_RSA"][::std::mem::align_of::<CRYPT_PKCINFO_RSA>() - 4usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::isPublicKey"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, isPublicKey) - 0usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::n"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, n) - 4usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::nLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, nLen) - 516usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::e"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, e) - 520usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::eLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, eLen) - 1032usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::d"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, d) - 1036usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::dLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, dLen) - 1548usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::p"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, p) - 1552usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::pLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, pLen) - 2064usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::q"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, q) - 2068usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::qLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, qLen) - 2580usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::u"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, u) - 2584usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::uLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, uLen) - 3096usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::e1"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, e1) - 3100usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::e1Len"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, e1Len) - 3612usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::e2"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, e2) - 3616usize];
    ["Offset of field: CRYPT_PKCINFO_RSA::e2Len"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_RSA, e2Len) - 4128usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CRYPT_PKCINFO_DLP {
    pub isPublicKey: ::std::os::raw::c_int,
    pub p: [::std::os::raw::c_uchar; 512usize],
    pub pLen: ::std::os::raw::c_int,
    pub q: [::std::os::raw::c_uchar; 512usize],
    pub qLen: ::std::os::raw::c_int,
    pub g: [::std::os::raw::c_uchar; 512usize],
    pub gLen: ::std::os::raw::c_int,
    pub y: [::std::os::raw::c_uchar; 512usize],
    pub yLen: ::std::os::raw::c_int,
    pub x: [::std::os::raw::c_uchar; 512usize],
    pub xLen: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CRYPT_PKCINFO_DLP"][::std::mem::size_of::<CRYPT_PKCINFO_DLP>() - 2584usize];
    ["Alignment of CRYPT_PKCINFO_DLP"][::std::mem::align_of::<CRYPT_PKCINFO_DLP>() - 4usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::isPublicKey"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, isPublicKey) - 0usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::p"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, p) - 4usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::pLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, pLen) - 516usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::q"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, q) - 520usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::qLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, qLen) - 1032usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::g"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, g) - 1036usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::gLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, gLen) - 1548usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::y"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, y) - 1552usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::yLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, yLen) - 2064usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::x"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, x) - 2068usize];
    ["Offset of field: CRYPT_PKCINFO_DLP::xLen"]
        [::std::mem::offset_of!(CRYPT_PKCINFO_DLP, xLen) - 2580usize];
};
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_NONE: CRYPT_ECCCURVE_TYPE = 0;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_P256: CRYPT_ECCCURVE_TYPE = 1;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_P384: CRYPT_ECCCURVE_TYPE = 2;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_P521: CRYPT_ECCCURVE_TYPE = 3;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_BRAINPOOL_P256: CRYPT_ECCCURVE_TYPE = 4;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_BRAINPOOL_P384: CRYPT_ECCCURVE_TYPE = 5;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_BRAINPOOL_P512: CRYPT_ECCCURVE_TYPE = 6;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_25519: CRYPT_ECCCURVE_TYPE = 7;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_448: CRYPT_ECCCURVE_TYPE = 8;
pub const CRYPT_ECCCURVE_TYPE_CRYPT_ECCCURVE_LAST: CRYPT_ECCCURVE_TYPE = 9;
pub type CRYPT_ECCCURVE_TYPE = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CRYPT_PKCINFO_ECC {
    pub isPublicKey: ::std::os::raw::c_int,
    pub curveType: CRYPT_ECCCURVE_TYPE,
    pub p: [::std::os::raw::c_uchar; 72usize],
    pub pLen: ::std::os::raw::c_int,
    pub a: [::std::os::raw::c_uchar; 72usize],
    pub aLen: ::std::os::raw::c_int,
    pub b: [::std::os::raw::c_uchar; 72usize],
    pub bLen: ::std::os::raw::c_int,
    pub gx: [::std::os::raw::c_uchar; 72usize],
    pub gxLen: ::std::os::raw::c_int,
    pub gy: [::std::os::raw::c_uchar; 72usize],
    pub gyLen: ::std::os::raw::c_int,
    pub n: [::std::os::raw::c_uchar; 72usize],
    pub nLen: ::std::os::raw::c_int,
    pub h: [::std::os::raw::c_uchar; 72usize],
    pub hLen: ::std::os::raw::c_int,
    pub qx: [::std::os::raw::c_uchar; 72usize],
    pub qxLen: ::std::os::raw::c_int,
    pub qy: [::std::os::raw::c_uchar; 72usize],
    pub qyLen: ::std::os::raw::c_int,
    pub d: [::std::os::raw::c_uchar; 72usize],
    pub dLen: ::std::os::raw::c_int,
}
